import mongoose from "mongoose";
import bcrypt from "bcryptjs";

const userSchema = new mongoose.Schema(
  {
    email: {
      type: String,
      required: [true, "Please provide your email"],
      unique: true,
      lowercase: true,
      trim: true,
      match: [/^\S+@\S+\.\S+$/, "Please provide a valid email"],
    },
    password: {
      type: String,
      required: function () {
        return this.provider === "local";
      },
      minlength: [6, "Password must be at least 6 characters"],
      select: false, // Don't include password in queries by default
    },
    fullName: {
      type: String,
      required: [true, "Please provide your full name"],
      trim: true,
      maxlength: [100, "Name cannot be more than 100 characters"],
    },
    phone: {
      type: String,
      trim: true,
      match: [/^[0-9]{10,11}$/, "Please provide a valid phone number"],
    },
    gender: {
      type: String,
      enum: ["male", "female", "other"],
    },
    avatar: {
      type: String,
      trim: true,
    },
    dateOfBirth: {
      type: Date,
    },
    address: {
      type: String,
      trim: true,
      maxlength: [500, "Address cannot exceed 500 characters"],
    },
    balance: {
      type: Number,
      default: 0,
      min: [0, "Balance cannot be negative"],
    },
    role: {
      type: String,
      enum: ["admin", "canteen_owner", "manager", "staff", "customer"],
      default: "customer",
    },
    status: {
      type: String,
      enum: ["active", "inactive", "banned", "pending"],
      default: "active",
    },
    provider: {
      type: String,
      enum: ["local", "google", "facebook"],
      default: "local",
    },
    providerId: {
      type: String,
      sparse: true,
    },
    emailVerified: {
      type: Boolean,
      default: false,
    },
    emailVerifiedAt: {
      type: Date,
    },
    forceChangePassword: {
      type: Boolean,
      default: false,
    },
    lastLoginAt: {
      type: Date,
    },
    campusId: {
      type: mongoose.Schema.Types.ObjectId,
      ref: "Campus",
      default: null,
    },
    // For staff - assigned canteen
    canteenId: {
      type: mongoose.Schema.Types.ObjectId,
      ref: "Canteen",
      default: null,
    },

    // --- User Governance Fields ---

    // Token versioning — thay thế Redis blacklist cho JWT revocation
    tokenVersion: {
      type: Number,
      default: 0,
      select: false, // không expose ra ngoài
    },

    // Temporary password cho system user (first login flow)
    isTemporaryPassword: {
      type: Boolean,
      default: false,
    },
    tempPasswordExpiresAt: {
      type: Date, // temp password expire sau 24h
    },
    passwordChangedAt: {
      type: Date,
    },

    // Disable/Re-enable audit trail
    disabledAt: { type: Date },
    disabledBy: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
    disabledReason: { type: String },
    reenabledAt: { type: Date },
    reenabledBy: { type: mongoose.Schema.Types.ObjectId, ref: "User" },

    // Ai tạo system user này
    createdBy: { type: mongoose.Schema.Types.ObjectId, ref: "User" },

    // IP đăng nhập cuối — sensitive, select: false
    lastLoginIp: {
      type: String,
      select: false,
    },
  },
  {
    timestamps: true,
  },
);

// Index for searching users
userSchema.index({ fullName: "text", email: "text" });
userSchema.index({ role: 1, status: 1 });
userSchema.index({ canteenId: 1 });
userSchema.index({ canteenId: 1, role: 1, status: 1 }); // compound index cho scope query

// Hash password before saving
userSchema.pre("save", async function (next) {
  // Only hash if password is modified
  if (!this.isModified("password")) return next();

  // Hash password with cost of 12
  this.password = await bcrypt.hash(this.password, 12);
  next();
});

// Không bao giờ trả về các field nhạy cảm trong JSON response
userSchema.methods.toJSON = function () {
  const obj = this.toObject();
  delete obj.password;
  delete obj.tokenVersion;
  delete obj.lastLoginIp;
  delete obj.tempPasswordExpiresAt;
  return obj;
};

// Compare password method
userSchema.methods.comparePassword = async function (candidatePassword) {
  return await bcrypt.compare(candidatePassword, this.password);
};

const User = mongoose.model("User", userSchema);

export default User;
